--- a/index.html
+++ b/index.html
@@ -220,8 +220,11 @@ function calcValue(h,w,tipo){
   if(!h || !w) return 0; 
   switch(tipo){
     case 'removivel': return (h+0)*(w+0)*349;
+      ${arredondaReal(total / 3)}\n`;
     case 'correr': return (h*w*459) + (1*1);
+      ${arredondaReal(total / 3)}\n`;
     case 'tecido': return (h*w*119) + (1*1);
+      ${arredondaReal(total / 3)}\n`;
     default: return 0;
   }
 }
@@ -312,10 +315,10 @@ function sendWhatsApp(){
     let arredondado = Math.round(valor);
     return arredondado.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL', minimumFractionDigits: 2, maximumFractionDigits: 2 });
   }
-  let msg = `*Orçamento Telas Mosquiteiras*\n\n`;
+  let msg = `${Nome}, segue orçamento da Tela Mosquiteira.\n\n`;
   msg += `Nome: ${nome}\n\n`;
   screens.forEach((s, i) => {
-    msg += `Tela ${i + 1} - ${s.ambient}\nTipo: ${tipoLabels[s.tipo]}\nAltura: ${s.h}m x Largura: ${s.w}m\nValor: ${formatBRL(s.v)}\n\n`;
+    msg += `Tela ${i + 1} - ${s.ambient}\nValor: ${formatBRL(s.v)}\n\n`;
   });
   msg += `Total: ${formatBRL(total)}\n`;
   msg += `3x sem juros: ${arredondaReal(total / 3)}\n`;
