--- a/index.html
+++ b/index.html
@@ -334,7 +334,11 @@ function sendWhatsApp(){
   window.open(`https://wa.me/551341412112?text=${urlMsg}`,'_blank');
 }
 
-function resetForm(){ $('nome').value=''; $('telefone').value=''; screens=[]; render(); }
+function resetForm(){
+  $('nome').value='';
+  screens=[];
+  render();
+}
 
 render();
 </script>
